--- a/simplekivy.kv
+++ b/simplekivy.kv
@@ -1,15 +1,26 @@
-# File name: main.py
+#: import FadeTransition kivy.uix.screenmanager.FadeTransition
 
-<Button>:
-    font_size: 40
-    color: 0,1,0,1
-    size_hint: 0.3, 0.2
+ScreenManagement:
+    transition: FadeTransition()
+    MainScreen:
+    AnotherScreen:
 
-<FloatLayout>:
+<MainScreen>:
+    name: "main"
     Button:
-        text: "Kivy"
-        pos_hint: {"x": 0, "top": 1}
+        on_release: app.root.current = "other"
+        text: "Next Screen"
+        font_size: 50
 
-    Button:
-        text: "Tutorials"
-        pos_hint: {"right": 1, "top": 1}
+<AnotherScreen>:
+    name: "other"
+
+    FloatLayout:
+        Painter
+        Button:
+            color: 0,1,0,1
+            font_size: 25
+            size_hint: 0.3,0.2
+            text: "Back Home"
+            on_release: app.root.current = "main"
+            pos_hint: {"right":1, "top":1}
